# tephra-rs

./: .gitignore  .trace  Cargo.toml  change_log.md  guide_book.md  notes.md  readme.md
docs/: guide_book.md  notes.md
docs/user-guide/: book.toml
docs/user-guide/book/: 404.html  building.html  combinators.html  control_combinators.html  create_the_lexer.html  create_the_parser.html  create_the_scanner.html  debugging.html  design_goals.html  design_notes.html  getting_started.html  handling_errors.html  index.html  introduction.html  join_combinators.html  lexer.html  parse_errors.html  parse_results.html  primitive_combinators.html  print.html  project_layout.html  repetition_combinators.html  searchindex.js  searchindex.json  section_combinators.html  spans.html  terminology.html  testing.html  tracing.html  wrapping_up.html
docs/user-guide/src/: SUMMARY.md  combinators.md  control_combinators.md  create_the_lexer.md  create_the_parser.md  create_the_scanner.md  design_goals.md  design_notes.md  getting_started.md  handling_errors.md  join_combinators.md  parse_errors.md  parse_results.md  primitive_combinators.md  repetition_combinators.md  section_combinators.md  terminology.md
src/: atma.rs  combinator.rs  lexer.rs  lib.rs  notes_fail.md  position.rs  primitive.rs  result.rs  span.rs  test.rs
src/atma/: ast.rs  ast_match.rs  color.rs  color_expr.rs  common.rs  expr.rs  function.rs  lexer.rs  scanner.rs  script.rs  selection.rs
src/combinator/: control.rs  join.rs  option.rs  primitive.rs  repeat.rs
src/result/: display.rs  error.rs  ext.rs  failure.rs  source_display.rs  success.rs
src/test/: abc_suite.rs  ae_lexer_suite.rs  ae_parser_suite.rs  as_lexer_suite.rs  atma.rs  atma_expr.rs  atma_script.rs  atma_suite.rs  atma_test.rs  error_suite.rs  lexer_suite.rs  metrics_suite.rs  span_suite.rs
src/test/atma/: color.rs  common.rs  lexer.rs  selection.rs
src/test/atma_suite/: ast.rs  color.rs  selection.rs
src/test/atma_test/: color.rs
tephra/: Cargo.toml
tephra-combinator/: Cargo.toml
tephra-combinator/src/: alt.rs  bracket.rs  cond.rs  control.rs  delimit.rs  imp.rs  join.rs  lib.rs  list.rs  misc.rs  primitive.rs  repeat.rs  test.rs
tephra-combinator/src/test/: abc.rs  abc_bracket.rs  abc_cond.rs  abc_join.rs  abc_list.rs  abc_nested.rs  abc_scanner.rs  abc_suite.rs  lexer_suite.rs
tephra-error/: Cargo.toml  readme.md
tephra-error/src/: code.rs  common.rs  display.rs  error.rs  highlight.rs  lib.rs  message.rs  note.rs  recover.rs  sink.rs  source_display.rs  test.rs
tephra-error/src/common/: delimit.rs  lexer.rs  source.rs
tephra-error/src/error/: delimit.rs  external.rs  lexer.rs  source.rs
tephra-span/: .trace  Cargo.toml
tephra-span/src/: lib.rs  metrics.rs  position.rs  source.rs  span.rs  test.rs
tephra-span/src/test/: metrics.rs  span_basic.rs  span_offset.rs
tephra-tracing/: Cargo.toml
tephra-tracing/src/: lib.rs  stub.rs
tephra/src/: context.rs  lexer.rs  lib.rs  position.rs  result.rs  span.rs  success.rs  test.rs
tephra/src/result/: error.rs  ext.rs  failure.rs  source_display.rs  success.rs
tephra/src/test/: abc_suite.rs  metrics_suite.rs  span_suite.rs
