[package]
name = "tephra"
version = "0.0.142"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# maintenance = { status = "experiemental" }
repository = "https://github.com/skysch/tephra-rs"
description = "Tephra parser library"
readme = "readme.md"
keywords = ["parser"]
categories = []
documentation = ""
homepage = ""
exclude = [
	"*.sublime-project",
	"*.sublime-workspace"]

[lib]
name = "tephra"


# Required dependencies
[dependencies]
colored = { version = "2.0" }
few = { version = "0.1.4" }
tracing = { version = "0.1" }
unicode-width = { version = "0.1" }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
color = { git = "https://github.com/skysch/color-rs" }

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


