[workspace]
members = [
	"tephra",
	"tephra-combinator",
	"tephra-tracing",
]



# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


