[workspace]
members = [
	"tephra",
	"tephra-combinator",
	"tephra-error",
	"tephra-span",
	"tephra-tracing",
]

[workspace.package]
version = "0.0.230"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
description = "Tephra parser combinator library"
homepage = "https://github.com/solarretrace/tephra-rs"
repository = "https://github.com/solarretrace/tephra-rs"
license = "MIT or Apache-2.0"
readme = "readme.md"
edition = "2021"
keywords = ["tephra"]
categories = ["parsing"]
exclude = [
    "*.sublime-project",
    "*.sublime-workspace",
    ".trace"]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


