[package]
name = "tephra-combinator"
version = "0.0.5"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/tephra-rs"
homepage = "https://github.com/solarretrace/tephra-rs"
description = "Tephra combinators library"
readme = "readme.md"
keywords = ["parser", "combinator"]
categories = []
documentation = ""
exclude = []

[lib]
name = "tephra_combinator"


[features]
default = []
trace = [
	"tracing",
	"tephra-tracing/tracing",
	"tephra/trace",
]

# Required dependencies.
[dependencies]
tephra = { version = "*", path = "../tephra" }
colored = { version = "2.0" }
few = { version = "0.1.4" }
unicode-width = { version = "0.1" }
simple_predicates = { version = "0.4" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
# Optional dependencies.
tracing = { version = "0.1", optional = true }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[badges]
maintenance = { status = "experimental" }
