[package]
name = "tephra-combinator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tephra combinators library"
readme.workspace = true
keywords = ["parser", "combinator"]
categories.workspace = true
exclude.workspace = true

[lib]
name = "tephra_combinator"


[features]
default = []
trace = [
	"tracing",
	"tephra-tracing/tracing",
	"tephra/trace",
]

# Required dependencies.
[dependencies]
colored = { version = "2.0" }
few = { version = "0.1.4" }
simple_predicates = { version = "0.4" }
smallvec = { version = "1.10", features = ["union"] }
tephra = { version = "*", path = "../tephra" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
unicode-width = { version = "0.1" }
# Optional dependencies.
tracing = { version = "0.1", optional = true, default_features = false, features = ["std", "log"] }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = { version = "1.3" }
ntest = { version = "0.9" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }


[badges]
maintenance = { status = "experimental" }
