[package]
name = "tephra-error"
version = "0.0.5"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/tephra-rs"
homepage = "https://github.com/solarretrace/tephra-rs"
description = "Tephra parse errors library"
readme = "readme.md"
keywords = []
categories = []
documentation = ""
exclude = []

[lib]
name = "tephra_error"

[features]
default = []
trace = [
	"tracing",
	"tephra-span/trace",
	"tephra-tracing/tracing",
]
no-color = [
	"colored/no-color",
]

# Required dependencies
[dependencies]
colored = { version = "2.0" }
tephra-span = { version = "*",  path = "../tephra-span" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
# Optional dependencies.
tracing = { version = "0.1", optional = true }
parking_lot = { version = "0.12.0" }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[badges]
maintenance = { status = "experimental" }
