[package]
name = "tephra-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tephra parse errors library"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
name = "tephra_error"

#[allow(clippy::negative_feature_names)]
[features]
default = []
trace = [
	"tracing",
	"tephra-span/trace",
	"tephra-tracing/tracing",
]
no-color = [
	"colored/no-color",
]

# Required dependencies
[dependencies]
colored = { version = "2.0.0" }
parking_lot = { version = "0.12.0" }
simple_predicates = { version = "0.4" }
tephra-span = { version = "*",  path = "../tephra-span" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
# Optional dependencies.
tracing = { version = "0.1", optional = true, default_features = false, features = ["std", "log"] }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = { version = "1.3" }
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
