[package]
name = "tephra-span"
version = "0.0.4"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skysch/tephra-rs"
homepage = "https://github.com/skysch/tephra-rs"
description = "Tephra span library"
readme = "readme.md"
keywords = []
categories = []
documentation = ""
exclude = []

[lib]
name = "tephra_span"

[features]
default = []
trace = [
	"tracing",
	"tephra-tracing/tracing",
]

# Required dependencies
[dependencies]
few = { version = "0.1.4" }
unicode-width = { version = "0.1" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
# Optional dependencies.
tracing = { version = "0.1", optional = true }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
strip-ansi-escapes = "*"

[badges]
maintenance = { status = "experimental" }
