[package]
name = "tephra-span"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tephra span library"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
name = "tephra_span"

[features]
default = []
trace = [
	"tracing",
	"tephra-tracing/tracing",
]

# Required dependencies
[dependencies]
few = { version = "0.1.4" }
unicode-width = { version = "0.1" }
tephra-tracing = { version = "*", path = "../tephra-tracing" }
# Optional dependencies.
tracing = { version = "0.1", optional = true, default_features = false, features = ["std", "log"] }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = { version = "1.3" }
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
strip-ansi-escapes = "*"
