[package]
name = "tephra-tracing"
version = "0.0.163"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skysch/tephra-rs"
homepage = "https://github.com/skysch/tephra-rs"
description = "Tephra tracing interface library"
readme = "readme.md"
keywords = []
categories = []
documentation = ""
exclude = []

[lib]
name = "tephra_tracing"

[features]
default = []

# Required dependencies
[dependencies]
tracing = { version = "0.1", optional = true }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]


[badges]
maintenance = { status = "experimental" }
