[package]
name = "tephra-tracing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tephra tracing interface library"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
name = "tephra_tracing"

[features]
default = []

# Required dependencies
[dependencies]
tracing = { version = "0.1", optional = true, default_features = false, features = ["std", "log"] }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
