[package]
name = "tephra"
version = "0.0.194"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/tephra-rs"
homepage = "https://github.com/solarretrace/tephra-rs"
description = "Tephra parser library"
readme = "readme.md"
keywords = ["lexer", "scanner", "parser", "combinator"]
categories = []
documentation = ""
exclude = []

[lib]
name = "tephra"


[features]
default = []
trace = [
	"tracing",
	"tephra-tracing/tracing",
	"tephra-error/trace",
	"tephra-span/trace",
]

# Required dependencies
[dependencies]
tephra-tracing = { version = "*", path = "../tephra-tracing" }
tephra-span = { version = "*", path = "../tephra-span" }
tephra-error = { version = "*", path = "../tephra-error" }
# Optional dependencies.
tracing = { version = "0.1", optional = true }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "0.2", default_features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[badges]
maintenance = { status = "experimental" }
