[package]
name = "tephra"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tephra parser library"
readme.workspace = true
keywords = ["lexer", "scanner", "parser", "combinator"]
categories.workspace = true
exclude.workspace = true

[lib]
name = "tephra"


[features]
default = ["trace", "no-color"]
trace = [
	"tracing",
	"tephra-tracing/tracing",
	"tephra-error/trace",
	"tephra-span/trace",
]
no-color = [
	"tephra-error/no-color",
]

# Required dependencies
[dependencies]
tephra-tracing = { version = "*", path = "../tephra-tracing" }
tephra-span = { version = "*", path = "../tephra-span" }
tephra-error = { version = "*", path = "../tephra-error" }
# Optional dependencies.
tracing = { version = "0.1", optional = true, default_features = false, features = ["std", "log"] }

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
